# livekit-msteams-bridge

./: .env.example  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  publish.yml
examples/agents/: .env.example  Dockerfile.avatar_agent  Dockerfile.voice_agent  README.md  avatar_agent.py  requirements.txt  voice_agent.py
examples/basic-bridge/: .env.example  README.md  index.mjs  package.json
examples/video-agent/: README.md  pyproject.toml  worker.py
examples/voice-agent/: README.md  pyproject.toml  worker.py
src/: cli.ts  config.ts  hmac.ts  index.ts  livekit.ts  log.ts  metrics.ts  protocol.ts  server.ts  session.ts  videoRelay.ts
test/: hmac.test.ts  protocol.test.ts  session.test.ts  videoRelay.test.ts
website/: astro.config.mjs  package-lock.json  package.json
website/src/content/docs/: agents-and-dispatch.md  architecture.md  configuration-reference.md  connecting-to-standin.md  contributing.md  getting-started.md  governors-and-privacy.md  index.mdx  library-api.md  troubleshooting.md  wire-protocol.md
