[project]
name = "teams-voice-agent-example"
version = "0.1.0"
description = "Example LiveKit voice agent answering Microsoft Teams calls via @komaa/livekit-msteams-bridge"
requires-python = ">=3.10,<3.14"
dependencies = [
    "livekit-agents>=1.0",
    "livekit-plugins-openai>=1.0",
    "livekit-plugins-silero>=1.0",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
